[gd_scene load_steps=37 format=4 uid="uid://bo45215kh6em2"]

[ext_resource type="Texture2D" uid="uid://ddaxda35iflnl" path="res://Chara2Upscaled.png" id="1_ehkex"]
[ext_resource type="TileSet" uid="uid://dlvmfvgfb1tfm" path="res://buildings.tres" id="1_g14j6"]
[ext_resource type="Texture2D" uid="uid://o12majydgwea" path="res://guy.png" id="1_vbegm"]
[ext_resource type="Script" uid="uid://cm4gtmkygqxeq" path="res://PlayerCamera.gd" id="1_xersf"]
[ext_resource type="Texture2D" uid="uid://bdycwi24c8fe5" path="res://Light.png" id="1_ykrsh"]
[ext_resource type="Texture2D" uid="uid://f1dbjtyj4bv5" path="res://GrassUpscaled.png" id="3_ykrsh"]
[ext_resource type="Texture2D" uid="uid://bc4j3pk158y6a" path="res://CharaUpscaled.png" id="4_ppyta"]
[ext_resource type="Script" uid="uid://bw8tx3uomldwr" path="res://charater.gd" id="4_ykrsh"]
[ext_resource type="Texture2D" uid="uid://c05agl5a6axer" path="res://DialogueUpscaled.png" id="8_00tp4"]
[ext_resource type="Script" uid="uid://dojqvrnq8w3uv" path="res://DialoguController.gd" id="8_xersf"]
[ext_resource type="Script" uid="uid://cm15tsymvrkw8" path="res://dialogue_manager.gd" id="11_77dp3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eski5"]
atlas = ExtResource("1_ehkex")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdf00"]
atlas = ExtResource("1_ehkex")
region = Rect2(64, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6gra"]
animations = [{
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_eski5")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_pdf00")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00tp4"]
size = Vector2(48, 56)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ehkex"]
texture = ExtResource("3_ykrsh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_xersf"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_ehkex")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ykrsh"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrsh"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 512, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g14j6"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 512, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbegm"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 896, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehkex"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 896, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xersf"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 768, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tp4"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 768, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_77dp3"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 640, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tkv4"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 640, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m0f1"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0q6j"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhym6"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3se8"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 384, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uty7l"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_45l4g"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 256, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uo0j"]
atlas = ExtResource("4_ppyta")
region = Rect2(0, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxl6d"]
atlas = ExtResource("4_ppyta")
region = Rect2(64, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_37kl0"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ykrsh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_g14j6")
}],
"loop": true,
"name": &"standdown",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_vbegm")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ehkex")
}],
"loop": true,
"name": &"standleft",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_xersf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_00tp4")
}],
"loop": true,
"name": &"standright",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_77dp3")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5tkv4")
}],
"loop": true,
"name": &"standup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m0f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0q6j")
}],
"loop": true,
"name": &"walkdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhym6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3se8")
}],
"loop": true,
"name": &"walkleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uty7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45l4g")
}],
"loop": true,
"name": &"walkright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uo0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxl6d")
}],
"loop": true,
"name": &"walkup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppyta"]
size = Vector2(30, 29)

[node name="Node2D" type="Node2D"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(292, 709)
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = -320
position_smoothing_enabled = true
position_smoothing_speed = 2.0
script = ExtResource("1_xersf")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
y_sort_enabled = true
position = Vector2(1, 385)

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasGroup"]
y_sort_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasGroup/StaticBody2D"]
y_sort_enabled = true
position = Vector2(231, 247)
sprite_frames = SubResource("SpriteFrames_a6gra")
autoplay = "default"
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasGroup/StaticBody2D"]
position = Vector2(231, 227)
shape = SubResource("RectangleShape2D_00tp4")

[node name="Buildings" type="TileMapLayer" parent="CanvasGroup"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAPr/AAAAAAAAAAAAAPv/AAAAAAEAAAAAAPz/AAAAAAIAAAAAAP3/AAAAAAMAAAAAAP7/AAAAAAQAAAAAAP//AAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAgAAAABAPr/AAABAAAAAAABAPv/AAABAAEAAAABAPz/AAABAAIAAAABAP3/AAABAAMAAAABAP7/AAABAAQAAAABAP//AAABAAUAAAABAAAAAAABAAYAAAABAAEAAAABAAcAAAABAAIAAAABAAgAAAACAPr/AAACAAAAAAACAPv/AAACAAEAAAACAPz/AAACAAIAAAACAP3/AAACAAMAAAACAP7/AAACAAQAAAACAP//AAACAAUAAAACAAAAAAACAAYAAAACAAEAAAACAAcAAAACAAIAAAACAAgAAAADAPr/AAADAAAAAAADAPv/AAADAAEAAAADAPz/AAADAAIAAAADAP3/AAADAAMAAAADAP7/AAADAAQAAAADAP//AAADAAUAAAADAAAAAAADAAYAAAADAAEAAAADAAcAAAADAAIAAAADAAgAAAAEAPr/AAAEAAAAAAAEAPv/AAAEAAEAAAAEAPz/AAAEAAIAAAAEAP3/AAAEAAMAAAAEAP7/AAAEAAQAAAAEAP//AAAEAAUAAAAEAAAAAAAEAAYAAAAEAAEAAAAEAAcAAAAEAAIAAAAEAAgAAAAFAPr/AAAFAAAAAAAFAPv/AAAFAAEAAAAFAPz/AAAFAAIAAAAFAP3/AAAFAAMAAAAFAP7/AAAFAAQAAAAFAP//AAAFAAUAAAAFAAAAAAAFAAYAAAAFAAEAAAAFAAcAAAAFAAIAAAAFAAgAAAAGAPr/AAAGAAAAAAAGAPv/AAAGAAEAAAAGAPz/AAAGAAIAAAAGAP3/AAAGAAMAAAAGAP7/AAAGAAQAAAAGAP//AAAGAAUAAAAGAAAAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAIAAAAGAAgAAAAHAPr/AAAHAAAAAAAHAPv/AAAHAAEAAAAHAPz/AAAHAAIAAAAHAP3/AAAHAAMAAAAHAP7/AAAHAAQAAAAHAP//AAAHAAUAAAAHAAAAAAAHAAYAAAAHAAEAAAAHAAcAAAAHAAIAAAAHAAgAAAAIAPr/AAAIAAAAAAAIAPv/AAAIAAEAAAAIAPz/AAAIAAIAAAAIAP3/AAAIAAMAAAAIAP7/AAAIAAQAAAAIAP//AAAIAAUAAAAIAAAAAAAIAAYAAAAIAAEAAAAIAAcAAAAIAAIAAAAIAAgAAAAJAPr/AAAJAAAAAAAJAPv/AAAJAAEAAAAJAPz/AAAJAAIAAAAJAP3/AAAJAAMAAAAJAP7/AAAJAAQAAAAJAP//AAAJAAUAAAAJAAAAAAAJAAYAAAAJAAEAAAAJAAcAAAAJAAIAAAAJAAgAAAABAAcAAAAFAAgAAAACAAcAAAAFAAgAAAA=")
tile_set = ExtResource("1_g14j6")

[node name="Grass" type="TileMapLayer" parent="CanvasGroup"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAMAAAAAAAAAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAUAAAAAAAkAAAAAAAYAAAAAAAoAAAAAAAcAAAAAAAsAAAAAAAgAAAAAAAwAAAAAAAkAAAABAAMAAAABAAAAAAABAAQAAAABAAEAAAABAAUAAAABAAIAAAABAAYAAAABAAMAAAABAAcAAAABAAQAAAABAAgAAAABAAUAAAABAAkAAAABAAYAAAABAAoAAAABAAcAAAABAAsAAAABAAgAAAABAAwAAAABAAkAAAACAAMAAAACAAAAAAACAAQAAAACAAEAAAACAAUAAAACAAIAAAACAAYAAAACAAMAAAACAAcAAAACAAQAAAACAAgAAAACAAUAAAACAAkAAAACAAYAAAACAAoAAAACAAcAAAACAAsAAAACAAgAAAACAAwAAAACAAkAAAADAAMAAAADAAAAAAADAAQAAAADAAEAAAADAAUAAAADAAIAAAADAAYAAAADAAMAAAADAAcAAAADAAQAAAADAAgAAAADAAUAAAADAAkAAAADAAYAAAADAAoAAAADAAcAAAADAAsAAAADAAgAAAADAAwAAAADAAkAAAAEAAMAAAAEAAAAAAAEAAQAAAAEAAEAAAAEAAUAAAAEAAIAAAAEAAYAAAAEAAMAAAAEAAcAAAAEAAQAAAAEAAgAAAAEAAUAAAAEAAkAAAAEAAYAAAAEAAoAAAAEAAcAAAAEAAsAAAAEAAgAAAAEAAwAAAAEAAkAAAAFAAMAAAAFAAAAAAAFAAQAAAAFAAEAAAAFAAUAAAAFAAIAAAAFAAYAAAAFAAMAAAAFAAcAAAAFAAQAAAAFAAgAAAAFAAUAAAAFAAkAAAAFAAYAAAAFAAoAAAAFAAcAAAAFAAsAAAAFAAgAAAAFAAwAAAAFAAkAAAAGAAMAAAAGAAAAAAAGAAQAAAAGAAEAAAAGAAUAAAAGAAIAAAAGAAYAAAAGAAMAAAAGAAcAAAAGAAQAAAAGAAgAAAAGAAUAAAAGAAkAAAAGAAYAAAAGAAoAAAAGAAcAAAAGAAsAAAAGAAgAAAAGAAwAAAAGAAkAAAAHAAMAAAAHAAAAAAAHAAQAAAAHAAEAAAAHAAUAAAAHAAIAAAAHAAYAAAAHAAMAAAAHAAcAAAAHAAQAAAAHAAgAAAAHAAUAAAAHAAkAAAAHAAYAAAAHAAoAAAAHAAcAAAAHAAsAAAAHAAgAAAAHAAwAAAAHAAkAAAAIAAMAAAAIAAAAAAAIAAQAAAAIAAEAAAAIAAUAAAAIAAIAAAAIAAYAAAAIAAMAAAAIAAcAAAAIAAQAAAAIAAgAAAAIAAUAAAAIAAkAAAAIAAYAAAAIAAoAAAAIAAcAAAAIAAsAAAAIAAgAAAAIAAwAAAAIAAkAAAAJAAMAAAAJAAAAAAAJAAQAAAAJAAEAAAAJAAUAAAAJAAIAAAAJAAYAAAAJAAMAAAAJAAcAAAAJAAQAAAAJAAgAAAAJAAUAAAAJAAkAAAAJAAYAAAAJAAoAAAAJAAcAAAAJAAsAAAAJAAgAAAAJAAwAAAAJAAkAAAA=")
tile_set = SubResource("TileSet_xersf")

[node name="Sprite2D" type="Sprite2D" parent="CanvasGroup"]
modulate = Color(1, 1, 0.627451, 0.596078)
z_index = 1
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_ykrsh")
position = Vector2(495, 855)
rotation = 3.14159
scale = Vector2(-0.534, -0.498)
texture = ExtResource("1_ykrsh")
offset = Vector2(0, -576)

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("camera")]
y_sort_enabled = true
position = Vector2(292, 709)
motion_mode = 1
script = ExtResource("4_ykrsh")
camera = NodePath("../Camera2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(0, 64)
sprite_frames = SubResource("SpriteFrames_37kl0")
animation = &"walkup"
autoplay = "standdown"
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_ppyta")
debug_color = Color(0, 0.380392, 0.701961, 0.760784)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D"]
remote_path = NodePath("../../Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("player", "character")]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 512.0
offset_right = 64.0
offset_bottom = 512.0
script = ExtResource("8_xersf")
player = NodePath("../../CharacterBody2D")
character = NodePath("../../CanvasGroup/StaticBody2D")

[node name="DialogueBox" type="NinePatchRect" parent="CanvasLayer/Dialogue"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 891.0
offset_bottom = 472.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.605884, 0.300032)
texture = ExtResource("8_00tp4")
region_rect = Rect2(0, 0, 768, 768)
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Dialogue/DialogueBox"]
visible = false
offset_right = 620.0
offset_bottom = 180.0
color = Color(1, 1, 1, 0.784314)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Dialogue/DialogueBox"]
visible = false
offset_left = 10.0
offset_top = 11.0
offset_right = 610.0
offset_bottom = 171.0
color = Color(0.384314, 0.00392157, 0.27451, 0.407843)

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Dialogue/DialogueBox"]
visible = false
layout_mode = 0
offset_left = 182.0
offset_top = 26.0
offset_right = 222.0
offset_bottom = 66.0
scale = Vector2(-4.02081, 3.02801)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Dialogue"]
z_index = 1
position = Vector2(112, -12)
scale = Vector2(0.192906, 0.192906)
texture = ExtResource("1_vbegm")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Dialogue"]
z_index = 1
offset_left = 216.0
offset_top = -16.0
offset_right = 488.0
offset_bottom = 88.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "I'm just a guy!"
scroll_active = false

[node name="TypeTimer" type="Timer" parent="CanvasLayer/Dialogue"]

[node name="PauseTimer" type="Timer" parent="CanvasLayer/Dialogue"]

[node name="DialogueManager" type="Node" parent="."]
script = ExtResource("11_77dp3")
